# GTextras

./: .coveragerc  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/workflows/: ci-tests.yaml
GTextras/: __init__.py  themes.py
tests/: __init__.py  test_themes.py
