[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["gtextras"]

[project]
name = "gtextras"
description = "Extra functionality for the Great Tables library"
readme = "README.md"
keywords = ["tables", "extra", "functions", "HTML"]
license.file = "LICENSE"
authors = [
    { name = "Richard Iannone", email = "riannone@me.com" }
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "importlib-metadata",
    "great_tables>=0.13.0",
    "typing_extensions>=3.10.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
pd = [
    "pandas>=2.2.3",
]
pl = [
    "polars>=1.17.1",
]
docs = [
    "jupyter",
    "nbclient>=0.10.0",
    "nbformat>=5.10.4",
    "quartodoc>=0.8.1; python_version >= '3.9'",
    "pandas>=2.2.3",
    "polars>=1.17.1",
]

[dependency-groups]
dev = [
    "black",
    "griffe==0.38.1",
    "jupyter",
    "nbclient>=0.10.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "pre-commit==2.15.0",
    "pyarrow",
    "pyright>=1.1.244",
    "pytest>=3",
    "pytest-cov",
    "pytest-snapshot",
    "quartodoc>=0.8.1; python_version >= '3.9'",
]

[project.urls]
homepage = "https://github.com/rich-iannone/GTextras"

[tool.flake8]
exclude = ["docs", ".venv", "tests/*"]

ignore = [
    "E402",    # module level import not at top of file
    "E501",    # line too long (maximum 100 characters)
    "W503",    # line break before binary operator
    "F811",    # redefinition of unused name
    "E203",    # whitespace before ':'
    "F401",    # 'module' imported but unused
    "F841",    # local variable 'name' is assigned to but never used
    "E702",    # multiple statements on one line (semicolon)
    "E704",    # multiple statements on one line (def)
]

max-line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=gtextras"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests"
]

[tool.black]
line-length = 100
